welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:3: error: value T is not a member of Unit
                                                                 		avance() T(i+1) = getCouleurSol}
                                                                                         ^